testsuite/c_test/enhancec_test/ENC0127-inline_nonnull_check_dereference_err/inline_nonnull_check_dereference_err.c
/*
 * Copyright (c) [2020-2022] Huawei Technologies Co.,Ltd.All rights reserved.
 *
 * OpenArkCompiler is licensed under Mulan PSL v2.
 * You can use this software according to the terms and conditions of the Mulan PSL v2.
 * You may obtain a copy of Mulan PSL v2 at:
 *
 *     http://license.coscl.org.cn/MulanPSL2
 *
 * THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND, EITHER
 * EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT, MERCHANTABILITY OR
 * FIT FOR A PARTICULAR PURPOSE.
 * See the Mulan PSL v2 for more details.
 */



#include <stdio.h>
#include <stdlib.h>


SAFE static inline void Test() {
  int *p = (int*)malloc(sizeof(int));
  int *q = *p; // CHECK: [[# @LINE ]] error: Dereference of nullable pointer in safe region when inlined to main
}

SAFE int main() {
  Test();
  return 0;
}
